Refactoring and stable state